--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
             <version>1.1.23</version>
         </dependency>
 
+        <!--腾讯云短信服务-->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.568</version>
+        </dependency>
+
     </dependencies>
 
     <build>
